# SwiftySyncUniversalClient

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  SwiftySyncNative.swift  SwiftySyncUniversalClient-Bridging-Header.h  SwiftySyncUniversalClient.cpp  SwiftySyncUniversalClient.h  SwiftySyncUniversalClient.hpp  SwiftySyncUniversalClient.podspec  SwiftySyncUniversalClient.sln  SwiftySyncUniversalClient.vcxproj  SwiftySyncUniversalClient.vcxproj.filters  Usage.h  build_for_ios.sh  c_api_connector.cpp  c_api_connector.h  c_api_test.c  cmake_generate_objc_lib.sh  main.cpp  vcpkg.json
.github/workflows/: cmake.yml
SwiftySyncUniversalClient.xcodeproj/: project.pbxproj
SwiftySyncUniversalClient.xcodeproj/project.xcworkspace/xcuserdata/evgenij.xcuserdatad/: UserInterfaceState.xcuserstate
SwiftySyncUniversalClient.xcodeproj/xcuserdata/evgenij.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: SwiftySyncUniversalClient.hpp  c_api_connector.h
src/: SwiftySyncUniversalClient.cpp  c_api_connector.cpp
test/: test.cpp  test_c_api.c
